src/components/Game/Prepare/Clue/Clue.scss
.clueComponent {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
    align-items: center;
    margin-top: 2rem;
    
    .counterWrapper {
        position: absolute;
        top: 1rem;
        left: 1rem;
        width: 4rem;
        aspect-ratio: 1;
        font-size: 1.2rem;
    }

    .buttons {
        width: 100%;
        display: flex;
        gap: 1rem;
    }
}

